Modified CSS to fix display bug on Safari

--- a/src/style.css
+++ b/src/style.css
@@ -105,7 +105,7 @@ p {
     font-size: 2rem;
   }
 
-  .power-btn {
+  .power-btn-div {
     width: 300px;
   }
 }
